@@ -1,0 +1,218 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!--
+ZWA005 TriSensor
+-->
+<Product xmlns='http://code.google.com/p/open-zwave/'>
+	<!-- Configuration Parameters -->
+	<CommandClass id="112">
+		<Value type="short" index="1" genre="config" label="Motion Re-trigger Time" units="Second" min="0" max="32767" value="30" >
+            <Help>
+                This parameter is configured the delay time before PIR sensor can be triggered again to reset motion timeout counter.
+				Value = 0 will disable PIR sensor from triggering until motion timeout has finished.
+            </Help>
+        </Value>
+		<Value type="short" index="2" genre="config" label="Motion Clear Time" units="Second" min="0" max="32767" value="240" >
+            <Help>
+                This parameter is configured the time to clear motion event after a motion event detected.
+				Time to motion clear, the device will send a clear event report to controller and send BASIC_SET to nodes associated in group 2 according to parameter 6.
+            </Help>
+        </Value>
+		<Value type="list" genre="config" instance="1" index="3" label="Motion Sensitivity" min="0" max="11" value="8" size="1">
+			<Help>
+				This parameter is configured the sensitivity that motion detect.
+				0  - PIR sensor disabled.
+				1  - Lowest sensitivity.
+				11 - Highest sensitivity.
+			</Help>
+			<Item label="Disabled" value="0"/>
+			<Item label="1" value="1"/>
+			<Item label="2" value="2"/>
+			<Item label="3" value="3"/>
+			<Item label="4" value="4"/>
+			<Item label="5" value="5"/>
+			<Item label="6" value="6"/>
+			<Item label="7" value="7"/>
+			<Item label="8" value="8"/>
+			<Item label="9" value="9"/>
+			<Item label="10" value="10"/>
+			<Item label="11" value="11"/>
+		</Value>
+		<Value type="list" genre="config" instance="1" index="4" label="Binary Sensor Report Enable" min="0" max="1" value="0" size="1">
+			<Help>Enable/disable sensor binary report when motion event is detected or cleared</Help>
+			<Item label="Disable" value="0"/>
+			<Item label="Enable" value="1"/>
+		</Value>
+		<Value type="list" genre="config" instance="1" index="5" label="Disable BASIC_SET to Associated nodes" min="0" max="3" value="3" size="1">
+			<Help>This parameter is configured the enabled or disabled send BASIC_SET command to nodes that associated in group 2 and group 3.</Help>
+			<Item label="Disabled All Group Basic Set Command" value="0"/>
+			<Item label="Enabled Group 2" value="1"/>
+			<Item label="Enabled Group 3 " value="2"/>
+			<Item label="Enabled Group 2 and Group 3" value="3"/>
+		</Value>
+		<Value type="list" genre="config" instance="1" index="6" label="Basic Set Value Settings for Group 2" min="0" max="5" value="0" size="1">
+			<Help>Define Basic Set Value  when motion event is triggered and / or cleared</Help>
+			<Item label="0xFF when motion is triggered and 0x00 when motion is cleared" value="0"/>
+			<Item label="0x00 when motion is triggered and 0xFF when motion is cleared" value="1"/>
+			<Item label="0xFF when motion is triggered" value="2"/>
+			<Item label="0x00 when motion is triggered" value="3"/>
+			<Item label="0x00 when motion event is cleared" value="4"/>
+			<Item label="0xFF when motion event is cleared" value="5"/>
+		</Value>
+		<Value type="short" index="7" genre="config" label="Temperature Alarm Value" units="0.1" value="239" >
+            <Help>
+                This parameter is configured the threshold value that alarm level for temperature.
+				When the current ambient temperature value is larger than this configuration value, device will send a BASIC_SET = 0xFF to nodes associated in group 3.
+				If current temperature value is less than this value, device will send a BASIC_SET = 0x00 to nodes associated in group 3.
+				Value = [Value] x 0.1(Celsius / Fahrenheit)
+				Available Settings: -400 to 850 (40.0 to 85.0 Celsius) or -400 to 1185 (-40.0 to 118.5 Fahrenheit).
+				Default value: 239 (23.9 Celsius) or 750 (75.0 Fahrenheit)
+            </Help>
+        </Value>
+		<Value type="list" genre="config" instance="1" index="10" label="Led Blink on motion" min="0" max="1" value="1" size="1">
+			<Help>
+				Configure if the Led Blink on motion event.
+				Note: This configuration is not affect inclusion, exclusion and reset.
+			</Help>
+			<Item label="Disable" value="0"/>
+			<Item label="Enable" value="1"/>
+		</Value>
+		<Value type="list" genre="config" instance="1" index="11" label="Led Color For Motion Event Report" min="0" max="8" value="2" size="1">
+			<Help>
+			</Help>
+			<Item label="Disabled" value="0"/>
+			<Item label="Red" value="1"/>
+			<Item label="Green" value="2"/>
+			<Item label="Blue" value="3"/>
+			<Item label="Yellow" value="4"/>
+			<Item label="Pink" value="5"/>
+			<Item label="Cyan" value="6"/>
+			<Item label="Purple" value="7"/>
+			<Item label="Orange" value="8"/>
+		</Value>
+		<Value type="list" genre="config" instance="1" index="12" label="Led Color For Temperature Sensor Report" min="0" max="8" value="0" size="1">
+			<Help>
+			</Help>
+			<Item label="Disabled" value="0"/>
+			<Item label="Red" value="1"/>
+			<Item label="Green" value="2"/>
+			<Item label="Blue" value="3"/>
+			<Item label="Yellow" value="4"/>
+			<Item label="Pink" value="5"/>
+			<Item label="Cyan" value="6"/>
+			<Item label="Purple" value="7"/>
+			<Item label="Orange" value="8"/>
+		</Value>
+		<Value type="list" genre="config" instance="1" index="13" label="Led Color For Light Sensor Report" min="0" max="8" value="0" size="1">
+			<Help>
+			</Help>
+			<Item label="Disabled" value="0"/>
+			<Item label="Red" value="1"/>
+			<Item label="Green" value="2"/>
+			<Item label="Blue" value="3"/>
+			<Item label="Yellow" value="4"/>
+			<Item label="Pink" value="5"/>
+			<Item label="Cyan" value="6"/>
+			<Item label="Purple" value="7"/>
+			<Item label="Orange" value="8"/>
+		</Value>
+		<Value type="list" genre="config" instance="1" index="14" label="Led Color For Battery Report" min="0" max="8" value="0" size="1">
+			<Help>
+			</Help>
+			<Item label="Disabled" value="0"/>
+			<Item label="Red" value="1"/>
+			<Item label="Green" value="2"/>
+			<Item label="Blue" value="3"/>
+			<Item label="Yellow" value="4"/>
+			<Item label="Pink" value="5"/>
+			<Item label="Cyan" value="6"/>
+			<Item label="Purple" value="7"/>
+			<Item label="Orange" value="8"/>
+		</Value>
+		<Value type="list" genre="config" instance="1" index="15" label="Led Color For Wakeup Notification Report" min="0" max="8" value="0" size="1">
+			<Help>
+			</Help>
+			<Item label="Disabled" value="0"/>
+			<Item label="Red" value="1"/>
+			<Item label="Green" value="2"/>
+			<Item label="Blue" value="3"/>
+			<Item label="Yellow" value="4"/>
+			<Item label="Pink" value="5"/>
+			<Item label="Cyan" value="6"/>
+			<Item label="Purple" value="7"/>
+			<Item label="Orange" value="8"/>
+		</Value>
+		<Value type="list" genre="config" instance="1" index="20" label="Temperature Scale Setting" min="0" max="1" value="0" size="1">
+			<Help>
+				Configure temperature sensor scale type, Temperature to report in Celsius or Fahrenheit
+			</Help>
+			<Item label="Celsius" value="0"/>
+			<Item label="Fahrenheit" value="1"/>
+		</Value>
+		<Value type="short" index="21" genre="config" label="Temperature Threshold Value to Report" units="0.1" value="20" >
+            <Help>
+                Change threshold value for change in temperature to induce an automatic report for temperature sensor.
+				Scale is identical setting in Parameter No.20.
+				Setting of value 20 can be a change of -2.0 or +2.0 (C or F depending on Parameter No.20) to induce automatic report or setting a value of 2 will be a change of 0.2(C or F).
+				Available Settings: 0 to 250.
+            </Help>
+        </Value>
+		<Value type="short" index="22" genre="config" label="Light intensity Threshold Value to Report" units="Lux" min="0" max="10000" value="100" >
+            <Help>
+                Change threshold value for change in lux to induce an automatic report for light sensor.
+            </Help>
+        </Value>
+		<Value type="short" index="23" genre="config" label="Temperature Sensor Report Interval" units="Second" min="0" max="32767" value="3600" >
+            <Help>
+                This parameter is configured the time interval for temperature sensor report.
+				This value is larger, the battery life is longer.
+				And the temperature value changed is not obvious.
+            </Help>
+        </Value>
+		<Value type="short" index="24" genre="config" label="Light Sensor Report Interval" units="Second" min="0" max="32767" value="3600" >
+            <Help>
+                This parameter is configured the time interval for light sensor report.
+				This value is larger, the battery life is longer.
+				And the light intensity changed is not obvious.
+            </Help>
+        </Value>
+		<Value type="short" index="30" genre="config" label="Temperature Offset Value" units="0.1" value="0" >
+            <Help>
+                The current measuring temperature value can be add and minus a value by this setting.
+				The scale can be decided by Parameter Number 20.
+				Temperature Offset Value = [Value] * 0.1(Celsius / Fahrenheit)
+				Available Settings: -200 to 200.
+            </Help>
+        </Value>
+		<Value type="short" index="31" genre="config" label="Light Intensity Offset Value" units="Lux" value="0" >
+            <Help>
+                The current measuring light intensity value can be add and minus a value by this setting.
+				Available Settings: -1000 to 1000.
+            </Help>
+        </Value>
+		<Value type="short" index="100" genre="config" label="Light Sensor Calibrated Coefficient" units="" min="0" max="32767" value="1024" >
+            <Help>
+                This configuration defines the calibrated scale for ambient light intensity.
+				Because the method and position that the sensor mounted and the cover of sensor will bring measurement error, user can get more real light intensity by this parameter setting.
+				User should run the steps as blows for calibrating
+				1) Set this parameter value to default (Assumes the sensor has been added in a Z- Wave Network).
+				2) Place a digital light meter close to sensor and keep the same direction, monitor the light intensity value (Vm) which report to controller and record it.
+				The same time user should record the value (Vs) of light meter.
+				3) The scale calibration formula: k = Vm / Vs.
+				4) The value of k is then multiplied by 1024 and rounded to the nearest whole number.
+				5) Set the value getting in 5) to this parameter, calibrate finished.
+
+				For example, Vm = 300, Vs = 2600, then k = 2600 / 300 = 8.6667
+					k = 8.6667 * 1024 = 8874.7 => 8875.
+					The parameter should be set to 8875.
+            </Help>
+        </Value>
+	</CommandClass>
+	<!-- Association Groups -->
+	<CommandClass id="133">
+		<Associations num_groups="3">
+			<Group index="1" max_associations="1" label="Lifeline" />
+			<Group index="2" max_associations="5" label="BasicSet report"/>
+			<Group index="3" max_associations="5" label="Temperature Alarm report"/>
+		</Associations>
+	</CommandClass>
+</Product>
