@@ -214,6 +214,9 @@ Version 1.5
  - Add Sensative Strips Comfort (Nechry)
  - Add Secure Controls (Horstmann) SRT-321 Thermostat (Nechry)
  - Add Aeotec ZWA001 LED Bulb 6 Multi-White (Nechry)
+ - Add Aeotec ZWA003 NanoMote Quad (Nechry)
+ - Add Aeotec ZWA004 NanoMote One (Nechry)
+ - Add Aeotec ZWA005 TriSensor (Nechry)
 
 Version 1.4
  - Released 10th Jan, 2016
